// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__swap-sim-ok 1`] = `
"Tx scan on ethereum

┌──────────────────────────────────────────────────────┐
│  Chain: ethereum                                     │
│  Protocol: Uniswap (uniswap)                         │
│  Action: Swap ETH → USDC                             │
│  Contract: Universal Router                          │
├──────────────────────────────────────────────────────┤
│  🧾 CHECKS                                           │
│  ✓ Source verified                                   │
│  ✓ Known protocol: Uniswap                           │
│  ✓ Source code verified: Universal Router [VERIFIED] │
│  ✓ Recognized protocol: Uniswap [KNOWN_PROTOCOL]     │
├──────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                  │
│  - No balance changes detected                       │
├──────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                        │
│  - None detected                                     │
├──────────────────────────────────────────────────────┤
│  📊 RISK: SAFE                         │
└──────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__swap-sim-failed 1`] = `
"Tx scan on ethereum

┌───────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                  │
│  Protocol: Uniswap (uniswap)                                                      │
│  Action: Swap ETH → USDC                                                          │
│  Contract: Universal Router                                                       │
├───────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                        │
│  ✓ Source verified                                                                │
│  ✓ Known protocol: Uniswap                                                        │
│  ✓ Source code verified: Universal Router [VERIFIED]                              │
│  ✓ Recognized protocol: Uniswap [KNOWN_PROTOCOL]                                  │
├───────────────────────────────────────────────────────────────────────────────────┤
│  🛡️ POLICY / ALLOWLIST                                                           │
│  ✓ Allowed protocol (soft): Uniswap                                               │
│  ✓ Allowlisted to: Universal Router (0x66a9...a8af)                               │
│  Policy decision: BLOCK (INCONCLUSIVE simulation)                                 │
├───────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                               │
│  - Simulation failed (Timeout)                                                    │
│  - wallet fast-mode enabled; simulation skipped.                                  │
│  - Balance changes unknown                                                        │
├───────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                     │
│  - Approvals unknown (simulation failed)                                          │
├───────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: LOW                                                       │
│  ⚠️ INCONCLUSIVE: simulation failed (Timeout) — balances/approvals may be unknown │
└───────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: wallet-approve-usdc-unlimited-f7bf0220 1`] = `
"\x1B[37mTx scan on ethereum (wallet mode)\x1B[39m

┌─────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                │
│  Protocol: Circle USDC\x1B[37m (circle)\x1B[39m                                                 │
│  Action: Allow 0x0000...8BA3 to spend up to UNLIMITED USDC (0xa0b8...eb48)      │
│  Contract: FiatTokenProxy → FiatToken V2.2                                      │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                      │
│ \x1B[32m ✓ Source verified\x1B[39m                                                              │
│ \x1B[33m ⚠️ Proxy / upgradeable (code can change)\x1B[39m                                       │
│ \x1B[32m ✓ Known protocol: Circle USDC\x1B[39m                                                  │
│  \x1B[33m⚠️ Upgradeable proxy (eip1967) - code can change\x1B[39m \x1B[37m[UPGRADEABLE]\x1B[39m                 │
│  \x1B[32m✓ Source code verified: FiatTokenProxy
\x1B[39m \x1B[37m[VERIFIED]\x1B[39m                             │
│  \x1B[32m✓ Recognized protocol: Circle USDC\x1B[39m \x1B[37m[KNOWN_PROTOCOL]\x1B[39m                            │
│  \x1B[33m⚠️ Unlimited token approval (max allowance)\x1B[39m \x1B[37m[UNLIMITED_APPROVAL]\x1B[39m               │
├─────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                             │
│ \x1B[33m - No balance changes detected (low confidence)\x1B[39m                                 │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                   │
│  \x1B[33m⚠️ Circle USDC FiatToken V2.2: UNLIMITED to 0x0000...8ba3\x1B[39m                      │
│  \x1B[33m⚠️ Allow 0x0000...8BA3 to spend up to UNLIMITED USDC (0xa0b8...eb48)\x1B[39m           │
├─────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: \x1B[33mLOW\x1B[39m                                                     │
│ \x1B[33m ⚠️ INCONCLUSIVE: simulation low confidence — balances/approvals may be unknown\x1B[39m │
└─────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__policy-unknown-spender 1`] = `
"Tx scan on ethereum

┌───────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                  │
│  Protocol: USDC                                                   │
│  Action: Approve USDC allowance                                   │
│  Contract: USD Coin                                               │
├───────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                        │
│  ✓ Source verified                                                │
│  ✓ Source code verified: USD Coin [VERIFIED]                      │
│  ⚠️ Unlimited token approval (max allowance) [UNLIMITED_APPROVAL] │
├───────────────────────────────────────────────────────────────────┤
│  🛡️ POLICY / ALLOWLIST                                           │
│  ✓ Allowed protocol (soft): USDC                                  │
│  ✓ Allowlisted to: USD Coin (0xa0b8...eb48)                       │
│  ⚠️ Non-allowlisted spender: Unknown spender (0x9999...9999)      │
│  Policy decision: BLOCK                                           │
├───────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                               │
│  - No balance changes detected                                    │
├───────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                     │
│  ⚠️ USD Coin: UNLIMITED to 0x9999...9999                          │
├───────────────────────────────────────────────────────────────────┤
│  📊 RISK: MEDIUM                                    │
└───────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: wallet-transferfrom-failed-8362e95e 1`] = `
"Tx scan on ethereum

┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                                                  │
│  Protocol: Unknown                                                                                                │
│  Action: transferFrom(address,address,uint256)                                                                    │
│  Contract: ExampleToken                                                                                           │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                                                        │
│  ✓ Source verified                                                                                                │
│  ✓ Source code verified: ExampleToken [VERIFIED]                                                                  │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                                                               │
│  - Simulation failed (execution reverted: transferFrom failed)                                                    │
│  - Balance changes unknown                                                                                        │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                                                     │
│  - Approvals unknown (simulation failed)                                                                          │
├───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: LOW                                                                                       │
│  ⚠️ INCONCLUSIVE: simulation failed (execution reverted: transferFrom failed) — balances/approvals may be unknown │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: north-star__approve-unlimited-sim-not-run 1`] = `
"Tx scan on ethereum

┌──────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                         │
│  Protocol: USDC                                                          │
│  Action: Approve USDC allowance                                          │
│  Contract: USD Coin                                                      │
├──────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                               │
│  ✓ Source verified                                                       │
│  ✓ Source code verified: USD Coin [VERIFIED]                             │
│  ⚠️ Unlimited token approval (max allowance) [UNLIMITED_APPROVAL]        │
├──────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                      │
│  - Simulation failed (not run)                                           │
├──────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                            │
│  - Partial approvals (simulation failed):                                │
│  ⚠️ USD Coin: UNLIMITED to 0x0000...0002                                 │
├──────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: LOW                                              │
│  ⚠️ INCONCLUSIVE: simulation not run — balances/approvals may be unknown │
└──────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`ui recordings snapshots recorded proxy outputs stay readable: wallet-uniswap-swap-rlp-to-eth-fb2584e4 1`] = `
"\x1B[37mTx scan on ethereum (wallet mode)\x1B[39m

┌─────────────────────────────────────────────────────────────────────────────────┐
│  Chain: ethereum                                                                │
│  Protocol: Uniswap\x1B[37m (uniswap)\x1B[39m                                                    │
│  Action: Swap 1 RLP → 0.0005 ETH                                                │
│  Contract: UniversalRouter                                                      │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🧾 CHECKS                                                                      │
│ \x1B[32m ✓ Source verified\x1B[39m                                                              │
│ \x1B[32m ✓ Known protocol: Uniswap\x1B[39m                                                      │
│  \x1B[32m✓ Source code verified: UniversalRouter\x1B[39m \x1B[37m[VERIFIED]\x1B[39m                             │
│  \x1B[32m✓ Recognized protocol: Uniswap\x1B[39m \x1B[37m[KNOWN_PROTOCOL]\x1B[39m                                │
├─────────────────────────────────────────────────────────────────────────────────┤
│  💰 BALANCE CHANGES                                                             │
│  - You sent 1 RLP                                                               │
│  - You received 0.0005 ETH                                                      │
│ \x1B[33m - Note: low confidence\x1B[39m                                                         │
├─────────────────────────────────────────────────────────────────────────────────┤
│  🔐 APPROVALS                                                                   │
│ \x1B[37m - None detected                 \x1B[39m                                               │
├─────────────────────────────────────────────────────────────────────────────────┤
│  📊 RISK: \x1B[33mLOW\x1B[39m                                                     │
│ \x1B[33m ⚠️ INCONCLUSIVE: simulation low confidence — balances/approvals may be unknown\x1B[39m │
└─────────────────────────────────────────────────────────────────────────────────┘
"
`;
